---------------------------------------------------------------------------
Version 5.8.8  [V5-stable] 2012-0?-??
- bugfix: omprog made rsyslog abort on startup if not binary to
  execute was configured
---------------------------------------------------------------------------
Version 5.8.7  [V5-stable] 2012-01-17
- bugfix: instabilities when using RFC5424 header fields
  Thanks to Kaiwang Chen for the patch
- bugfix: imuxsock did truncate part of received message if it did not
  contain a proper date. The truncation occured because we removed that
  part of the messages that was expected to be the date.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=295
- bugfix: potential abort after reading invalid X.509 certificate
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=290
  Thanks to Tomas Heinrich for the patch
- bugfix: stats counter were not properly initialized on creation
- FQDN hostname for multihomed host was not always set to the correct name
  if multiple aliases existed. Thanks to Tomas Heinreich for the patch.
- re-licensed larger parts of the codebase under the Apache license 2.0
---------------------------------------------------------------------------
Version 5.8.6  [V5-stable] 2011-10-21
- bugfix: missing whitespace after property-based filter was not detected
- bugfix: $OMFileFlushInterval period was doubled - now using correct value
- bugfix: ActionQueue could malfunction due to index error
  Thanks to Vlad Grigorescu for the patch
- bugfix: $ActionExecOnlyOnce interval did not work properly
  Thanks to Tomas Heinrich for the patch
- bugfix: race condition when extracting program name, APPNAME, structured
  data and PROCID (RFC5424 fields) could lead to invalid characters e.g.
  in dynamic file names or during forwarding (general malfunction of these
  fields in templates, mostly under heavy load)
- bugfix: imuxsock did no longer ignore message-provided timestamp, if